--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav>
+
+                <a href="#" class="logo">
+                    
+                    A  
+                </a>
+                <ul class="navigation">
+                    <li class="navlinks">
+                        <a href="#">
+                            Главная 
+                        </a>
+
+                    </li>
+                    <li class="navlinks">
+                        <a href="#">
+                            Контент
+                        </a>
+
+                    </li>
+                    <li class="navlinks">
+                        <a href="#">
+                            Контакты
+                        </a>
+
+                    </li>
+                    <li class="navlinks">
+                        <a href="#">
+                            О нас
+                        </a>
+
+                    </li>
+
+
+                </ul>
+            </nav>
+            <section class="title">
+                <p class="minitext"> futured class</p>
+                <h1 class="bigtext"> the role of user interface designer</h1>
+            </section>
+        </div>
+    </header>
 </body>
 </html>
