--- a/index.html
+++ b/index.html
@@ -48,8 +48,18 @@
             <section class="title">
                 <p class="minitext"> futured class</p>
                 <h1 class="bigtext"> the role of user interface designer</h1>
+                <a href="#" class="join">
+                  <p class="join-text">➤</p>  <p class="join-text">join <br> The class </p>
+                </a>
             </section>
-        </div>
+            <section class="infoblock"> 
+                <div class="leftblock" > 
+                    <img src="img/girl-avatar.png" > 
+                    <h2>Karen William</h2>
+                </div>
+                
+                <div class="rightblock"></div>  
+            </section>
     </header>
 </body>
 </html>
