--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             <section class="infoblock"> 
                 <div class="leftblock" > 
                     <img src="img/girl-avatar.png" > 
-                    <h2>Karen William</h2>
+                    <h2>Karen William </h2>
+                    <p> Senior designer</p>
                 </div>
                 
                 <div class="rightblock"></div>  
+
             </section>
     </header>
 </body>
