--- a/index.html
+++ b/index.html
@@ -59,9 +59,23 @@
                     <p> Senior designer</p>
                 </div>
                 
-                <div class="rightblock"></div>  
+                <div class="rightblock">
+                    <div class="audioblock" >
+                        <img src="img/man-avatar.png">
+                        <div class="audiocontainer">
+                            <div class="audiopanel">
+                            <div class="control">
+                            <i class="fi-rr-play" id="playPause"></i>        
+                            </div>
+                            <div id="wave"></div>
+                        </div>
+                        </div>
+                    </div>
+                </div>  
 
             </section>
     </header>
+    <script src="wavesurfer.js"></script>
+    <script src="media.js"></script>
 </body>
 </html>
